[package]
name = "go-links"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10" }
log = "0.4.17"
env_logger = "0.10.0"
toml = "0.5.10"
serde = "1.0"
serde_derive = "1.0"